@@ -43,6 +43,7 @@ enum async_reply_reason
   EXEC_ASYNC_SYSCALL_RETURN,
   EXEC_ASYNC_EXEC,
   EXEC_ASYNC_NO_HISTORY,
+  EXEC_ASYNC_UNAVAILABLE,
   /* This is here only to represent the number of enums.  */
   EXEC_ASYNC_LAST
 };
